// Okomo — Identity Bounded Context Data Model (DBML)
// Visualize at: https://dbdiagram.io/
//
// Este arquivo descreve o modelo lógico do bounded context Identity
// Inclui: Users, Roles, Seller Profiles, Tokens de confirmação e reset

Table users {
  id uuid [pk, note: "Primary key, gerado aleatoriamente"]
  name varchar [note: "Nome do usuário"]
  email varchar [unique, not null, note: "Email único, validado"]
  password_digest varchar [not null, note: "Hash bcrypt da senha"]
  status varchar [not null, default: "pending_confirmation", note: "pending_confirmation, active, blocked, deactivated"]
  email_confirmed_at timestamp [note: "Null até confirmação"]
  last_login_at timestamp [note: "Rastreia último acesso"]
  terms_accepted_at timestamp [note: "Aceite dos Termos de Uso"]
  privacy_policy_accepted_at timestamp [note: "Aceite da Política de Privacidade"]
  consent_version varchar [note: "Versão dos documentos aceitos"]
  consent_ip_address inet [note: "IP do aceite quando necessário"]
  consent_user_agent text [note: "User-Agent do aceite quando necessário"]
  blocked_at timestamp [note: "Data de bloqueio"]
  deactivated_at timestamp [note: "Data de desativação"]
  anonymized_at timestamp [note: "Data de anonimização seletiva"]
  deleted_at timestamp [note: "Soft delete técnico, quando aplicável"]
  created_at timestamp [not null, default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [not null, default: "CURRENT_TIMESTAMP"]

  indexes {
    email [unique, name: "users_email_idx"]
    status [name: "users_status_idx"]
    created_at [name: "users_created_at_idx"]
    anonymized_at [name: "users_anonymized_at_idx"]
    deleted_at [name: "users_deleted_at_idx"]
    consent_version [name: "users_consent_version_idx"]
  }

  note: "Armazena dados de usuários, autenticação e consentimento. LGPD: anonimização seletiva via anonymized_at; exclusão física não é padrão."
}

Table roles {
  id uuid [pk]
  name varchar [unique, not null, note: "buyer, seller, platform_admin"]
  description text [note: "Descrição das responsabilidades"]
  created_at timestamp [not null, default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [not null, default: "CURRENT_TIMESTAMP"]

  indexes {
    name [unique, name: "roles_name_idx"]
  }

  note: "Define papéis e permissões no sistema. Predefinidos: buyer, seller, platform_admin"
}

Table user_roles {
  id uuid [pk]
  user_id uuid [not null, note: "Referência para users"]
  role_id uuid [not null, note: "Referência para roles"]
  granted_at timestamp [not null, default: "CURRENT_TIMESTAMP", note: "Data de concessão do role"]
  revoked_at timestamp [note: "Null enquanto ativo, preenchido ao ser revogado"]
  granted_by_user_id uuid [note: "Qual usuário admin concedeu o role"]
  revoked_by_user_id uuid [note: "Qual usuário admin revogou o role"]
  reason text [note: "Motivo da concessão ou revogação"]
  created_at timestamp [not null, default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [not null, default: "CURRENT_TIMESTAMP"]

  indexes {
    (user_id, role_id) [name: "user_roles_user_id_role_id_idx"]
    (user_id, role_id, revoked_at) [name: "user_roles_active_role_idx"]
    user_id [name: "user_roles_user_id_idx"]
    role_id [name: "user_roles_role_id_idx"]
    revoked_at [name: "user_roles_revoked_at_idx"]
    granted_by_user_id [name: "user_roles_granted_by_user_id_idx"]
    revoked_by_user_id [name: "user_roles_revoked_by_user_id_idx"]
  }

  note: "Relacionamento auditável muitos-para-muitos entre usuários e papéis. Mantém histórico completo de concessões e revogações. Implementar user_roles_active_role_idx como partial unique WHERE revoked_at IS NULL no PostgreSQL."
}

Table seller_profiles {
  id uuid [pk]
  user_id uuid [unique, not null, note: "Um-para-um com users"]
  display_name varchar [not null, note: "Nome público do vendedor"]
  description text [note: "Descrição da loja"]
  status varchar [not null, default: "pending_review", note: "pending_review, approved, rejected, suspended"]
  document_type varchar [not null, note: "cpf, cnpj, mei"]
  document_number varchar [not null, note: "Número do documento (criptografado em repouso)"]
  legal_name varchar [not null, note: "Razão social ou nome legal"]
  contact_email varchar [not null, note: "E-mail de contato comercial"]
  contact_phone varchar [note: "Telefone de contato"]
  commercial_address jsonb [note: "Endereço comercial: {rua, número, complemento, cidade, estado, cep, país}"]
  requested_at timestamp [not null, default: "CURRENT_TIMESTAMP", note: "Data da solicitação"]
  reviewed_at timestamp [note: "Data da análise"]
  reviewed_by_user_id uuid [note: "User com role platform_admin que revisou"]
  rejection_reason text [note: "Motivo da rejeição, se aplicável"]
  approved_at timestamp [note: "Data da aprovação"]
  suspended_at timestamp [note: "Data da suspensão"]
  suspension_reason text [note: "Motivo da suspensão, se aplicável"]
  created_at timestamp [not null, default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [not null, default: "CURRENT_TIMESTAMP"]

  indexes {
    user_id [unique, name: "seller_profiles_user_id_idx"]
    status [name: "seller_profiles_status_idx"]
    requested_at [name: "seller_profiles_requested_at_idx"]
    reviewed_by_user_id [name: "seller_profiles_reviewed_by_user_id_idx"]
    document_number [name: "seller_profiles_document_number_idx"]
  }

  note: "Perfis de vendedor com processo de aprovação e dados comerciais. Status: pending_review → approved/rejected/suspended"
}

Table email_confirmation_tokens {
  id uuid [pk]
  user_id uuid [not null, note: "Referência para users"]
  token_digest varchar [unique, not null, note: "SHA256 do token (nunca texto plano)"]
  expires_at timestamp [not null, note: "Expira após 24h"]
  used_at timestamp [note: "Null até ser utilizado"]
  created_at timestamp [not null, default: "CURRENT_TIMESTAMP"]

  indexes {
    token_digest [unique, name: "email_confirmation_tokens_token_digest_idx"]
    user_id [name: "email_confirmation_tokens_user_id_idx"]
    expires_at [name: "email_confirmation_tokens_expires_at_idx"]
    used_at [name: "email_confirmation_tokens_used_at_idx"]
  }

  note: "Tokens temporários para confirmar propriedade de email. Expira e não reutilizável."
}

Table password_reset_tokens {
  id uuid [pk]
  user_id uuid [not null, note: "Referência para users"]
  token_digest varchar [unique, not null, note: "SHA256 do token (nunca texto plano)"]
  expires_at timestamp [not null, note: "Expira após 2h"]
  used_at timestamp [note: "Null até ser utilizado"]
  created_at timestamp [not null, default: "CURRENT_TIMESTAMP"]

  indexes {
    token_digest [unique, name: "password_reset_tokens_token_digest_idx"]
    user_id [name: "password_reset_tokens_user_id_idx"]
    expires_at [name: "password_reset_tokens_expires_at_idx"]
    used_at [name: "password_reset_tokens_used_at_idx"]
  }

  note: "Tokens temporários para reset de senha. Expira e não reutilizável após uso."
}

// Relacionamentos

Ref: users.id < user_roles.user_id [
  delete: restrict,
  note: "Histórico de roles deve sobreviver; contas devem ser anonimizadas em vez de deletadas fisicamente"
]

Ref: roles.id < user_roles.role_id [
  delete: restrict,
  note: "Não pode deletar role que está atribuída a usuários"
]

Ref: users.id < user_roles.granted_by_user_id [
  delete: setnull,
  note: "Admin que concedeu o role"
]

Ref: users.id < user_roles.revoked_by_user_id [
  delete: setnull,
  note: "Admin que revogou o role"
]

Ref: users.id - seller_profiles.user_id [
  delete: restrict,
  note: "Um-para-um: cada usuário tem no máximo um perfil de vendedor; aplicar retenção/anonimização em vez de cascade"
]

Ref: users.id < seller_profiles.reviewed_by_user_id [
  delete: setnull,
  note: "User com role platform_admin que revisou o perfil"
]

Ref: users.id < email_confirmation_tokens.user_id [
  delete: cascade,
  note: "Remoção técnica controlada remove tokens temporários; anonimização é o caminho padrão"
]

Ref: users.id < password_reset_tokens.user_id [
  delete: cascade,
  note: "Remoção técnica controlada remove tokens temporários; anonimização é o caminho padrão"
]
